# omgmail

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml
omgmail/: __init__.py  __main__.py  cli.py  db_interface.py  imap_interface.py
tests/: test_cli.py  test_db_interface.py  test_imap_interface.py
tools/: do_checks.sh
